compiler/tests/success/otbn/intrinsic_xor.jazz
export
fn xor(reg u32 arg0 arg1) {
    reg u32 x;
    x = #XOR(arg0, arg1);
    [x] = x;
}
