compiler/tests/fail/arm-m4/intrinsic_ldrbS.jazz
export
fn ldrb(reg u32 arg) -> reg u32 {
    reg u32 x;
    ?{}, x = #LDRBS((u8)[arg]);
    x = x;
    return x;
}
